@@ -1,3 +1,13 @@
+2009-08-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* data/nancy_bot/default_msg.data,
+	pcmanx-gtk2.spec.in,
+	po/zh_CN.po,
+	po/zh_TW.po,
+	src/core/termdata.cpp,
+	src/mainframe.cpp,
+	src/pcmanx_gtk2.cpp: Change official website url of pcmanx-gtk2.
+
 2009-08-03  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>
 
 	* configure.ac: Bump to 0.3.9
